added some common style and made a kick start!

--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
+:root {
+  --dark1: #131313;
+  --dark2: #424242;
+  --dark3: #727272;
+  --dark4: #a1a1a1;
+  --dark5: #d0d0d0;
+  --dark6: #e7e7e7;
+  --dark7: #f3f3f3;
+  --white: #ffffff;
+  --accent: #ff900e;
+}
+
 .work-sans-font {
   font-family: "Work Sans", sans-serif;
   font-optical-sizing: auto;
@@ -12,6 +24,67 @@
   box-sizing: border-box;
 }
 
-body {
-  background-color: red;
+/* common class */
+
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+h1,
+h2 {
+  color: var(--dark1);
+  font-weight: 700;
+  line-height: 117%;
+}
+p {
+  color: var(--dark3);
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+a {
+  text-decoration: none;
+  color: var(--dark2);
+  font-size: 1.12rem;
+  font-weight: 500;
+  line-height: 160%;
+}
+
+.btn {
+  background-color: var(--accent);
+  color: var(--white);
+  font-size: 1.25rem;
+  font-weight: 600;
+  line-height: 115%;
+  text-align: center;
+  border-radius: 0.5rem;
+  padding: 1.25em 1.5em;
+}
+
+/*uncommon class/id */
+
+header {
+  background-color: rgba(255, 144, 14, 0.1);
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  gap: 2rem;
+}
+
+#logo {
+  font-size: 2.8rem;
+  font-weight: 700;
+  line-height: 117%;
+  color: var(--dark1);
 }
