--- a/style/main.css
+++ b/style/main.css
@@ -27,8 +27,9 @@
 /* common class */
 
 .container {
-  max-width: 1440px;
-  margin: 0 auto;
+  max-width: 1460px;
+  margin: clamp(2.5rem, 9.027vw, 8.125rem) auto 0 auto;
+  padding: 0 1.25rem;
 }
 
 h1,
@@ -36,11 +37,16 @@ h2 {
   color: var(--dark1);
   font-weight: 700;
   line-height: 117%;
+  margin-bottom: 0.375em;
 }
 h1 {
   font-size: clamp(2rem, 4.44vw, 4rem);
-  margin-bottom: 0.375em;
 }
+
+h2 {
+  font-size: clamp(1.5rem, 3.125vw, 2.81rem);
+}
+
 p {
   color: var(--dark3);
   font-size: 1rem;
@@ -84,6 +90,15 @@ img {
   width: 100%;
 }
 
+.d3text {
+  color: var(--dark3);
+  font-weight: 400;
+}
+
+.accentText {
+  color: var(--accent);
+}
+
 /*uncommon class/id */
 
 header {
@@ -112,21 +127,49 @@ nav ul {
   color: var(--dark1);
 }
 
-#heroSection .content {
+.content {
   max-width: 868px;
   margin: clamp(1.56rem, 8.05vw, 7.25rem) auto clamp(1.56rem, 3.47vw, 3.125rem)
     auto;
   text-align: center;
 }
 
-#heroSection .content p {
+.content p,
+.content2 p {
   margin-bottom: 2em;
 }
 
 #heroImage {
-  width: min(1440px, 95%);
+  width: min(1440px, 100%);
   margin: 0 auto;
 }
+
+#quickList {
+  display: flex;
+  gap: clamp(1.5rem, 5.069vw, 4.56rem);
+  align-items: center;
+}
+
+.imgGallery {
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.content2 {
+  max-width: 537px;
+}
+
+/* tablet device */
+
+@media screen and (min-width: 540px) and (max-width: 768px) {
+  #quickList {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+/* mobile device */
 
 @media screen and (max-width: 540px) {
   nav,
