--- a/style/main.css
+++ b/style/main.css
@@ -33,18 +33,33 @@
 }
 
 h1,
-h2 {
+h2,
+.altH1 {
   color: var(--dark1);
   font-weight: 700;
   line-height: 117%;
   margin-bottom: 0.375em;
 }
-h1 {
+h1,
+.altH1 {
   font-size: clamp(2rem, 4.44vw, 4rem);
+}
+
+.altH1 {
+  color: var(--white);
+  margin-bottom: 0;
 }
 
 h2 {
   font-size: clamp(1.5rem, 3.125vw, 2.81rem);
+}
+
+h3 {
+  color: var(--dark1);
+  font-size: 1.25rem;
+  font-weight: 600;
+  line-height: 115%;
+  text-align: left;
 }
 
 p {
@@ -177,6 +192,30 @@ nav ul {
 #left-border {
   padding-left: 1.25rem;
   border-left: 0.3rem solid var(--accent);
+}
+
+.card-container {
+  display: grid;
+  gap: 1.25rem;
+}
+
+.cards {
+  display: grid;
+  gap: 0.75em;
+  max-width: 586px;
+  padding: 1.86rem;
+  border-radius: 0.5rem;
+  box-shadow: 0px 0.4rem 1.86rem 0rem rgba(0, 0, 0, 0.06);
+}
+
+.labeltext {
+  max-width: 342px;
+  background-color: var(--accent);
+  color: var(--white) !important;
+  text-align: center;
+  font-size: 25px; /* Need to change this to rem value */
+  border-radius: 0.5rem;
+  padding: 2.85em 2em;
 }
 
 /* tablet device */
