--- a/style/main.css
+++ b/style/main.css
@@ -208,6 +208,10 @@ nav ul {
   box-shadow: 0px 0.4rem 1.86rem 0rem rgba(0, 0, 0, 0.06);
 }
 
+.img-container {
+  max-width: 45%;
+}
+
 .labeltext {
   max-width: 342px;
   background-color: var(--accent);
@@ -215,7 +219,32 @@ nav ul {
   text-align: center;
   font-size: 25px; /* Need to change this to rem value */
   border-radius: 0.5rem;
-  padding: 2.85em 2em;
+  padding: clamp(1.5rem, 3.125vw, 2.85rem) clamp(1rem, 2.2vw, 2rem);
+  margin: -71px 0 0 -92px;
+  position: relative;
+  z-index: 999;
+}
+
+/* Laptop devices */
+
+@media screen and (max-width: 1280px) {
+  #features > .container {
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+  }
+
+  /* .text-content {
+    max-width: 100%;
+  } */
+
+  .img-container {
+    max-width: 85%;
+  }
+
+  .labeltext {
+    margin: 1.5rem 0 0 0;
+  }
 }
 
 /* tablet device */
