--- a/style/main.css
+++ b/style/main.css
@@ -227,12 +227,44 @@ nav ul {
 
 #SomeFacts {
   display: grid;
-  gap: 4.25rem;
+  gap: clamp(1.5rem, 4.4vw, 2.5rem);
 }
 
 #SomeFacts .heading {
   max-width: 542px;
   text-align: left;
+}
+
+.fact-cards-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1.5rem;
+  place-items: center;
+}
+
+.fact-card {
+  width: 15rem;
+  border: 1px solid var(--accent);
+  border-radius: 0.5rem;
+  padding: 2.75rem 2rem;
+  text-align: center;
+}
+
+.fact-card img {
+  width: 37px;
+}
+
+.fact-card-heading {
+  font-size: 2.8rem;
+  font-weight: 600;
+  color: var(--dark2);
+  margin: 0.6rem 0 0.25rem 0;
+}
+
+.fact-card-text {
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: var(--dark3);
 }
 
 /* Laptop devices */
@@ -255,6 +287,14 @@ nav ul {
   .labeltext {
     margin: 1.5rem 0 0 0;
   }
+
+  .fact-cards-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .fact-card {
+    width: 100%;
+  }
 }
 
 /* tablet device */
@@ -275,5 +315,9 @@ nav ul {
   }
   nav {
     gap: 1.2rem;
+  }
+
+  .fact-cards-container {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
